--- a/demo-gigya-java/src/main/res/layout/fragment_create.xml
+++ b/demo-gigya-java/src/main/res/layout/fragment_create.xml
@@ -53,6 +53,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_fragment_create_name" />
 
+    <com.ownid.sdk.view.OwnIdButton
+        android:id="@+id/own_id_register"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        app:emailEditText="@id/et_fragment_create_email"
+        app:layout_constraintBottom_toBottomOf="@id/et_fragment_create_password"
+        app:layout_constraintEnd_toStartOf="@id/et_fragment_create_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/et_fragment_create_password" />
+
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_fragment_create_password"
         android:layout_width="0dp"
@@ -73,19 +84,9 @@
         android:textDirection="locale"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/b_fragment_create_create"
-        app:layout_constraintEnd_toStartOf="@id/own_id_register"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_fragment_create_email" />
-
-    <com.ownid.sdk.view.OwnIdButton
-        android:id="@+id/own_id_register"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        app:emailEditText="@id/et_fragment_create_email"
-        app:layout_constraintBottom_toBottomOf="@id/et_fragment_create_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_fragment_create_password" />
+        app:layout_constraintStart_toEndOf="@id/own_id_register"
+        app:layout_constraintTop_toBottomOf="@id/et_fragment_create_email" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/b_fragment_create_create"
