--- a/sdk-core/src/main/res/values/styles.xml
+++ b/sdk-core/src/main/res/values/styles.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="OwnIdTheme.Widgets" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/com_ownid_sdk_color_blue</item>
+    </style>
+
     <style name="OwnIdButton.OrTextAppearance.Default" parent="@style/TextAppearance.AppCompat" />
 
     <style name="OwnIdButton.TooltipTextAppearance.Default" parent="@style/TextAppearance.AppCompat" />
