--- a/sdk-core/src/main/res/drawable-night/com_ownid_sdk_button_checkmark.xml
+++ b/sdk-core/src/main/res/drawable-night/com_ownid_sdk_button_checkmark.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="48"
     android:viewportHeight="48">
     <path
-        android:fillColor="#36A41D"
+        android:fillColor="#40AE27"
         android:pathData="M36,12m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0" />
     <path
         android:fillColor="#FFF"
