--- a/sdk/core/src/main/res/layout/com_ownid_sdk_internal_ui_otp.xml
+++ b/sdk/core/src/main/res/layout/com_ownid_sdk_internal_ui_otp.xml
@@ -63,12 +63,14 @@
             android:imeOptions="actionNext|flagNoExtractUi"
             android:importantForAutofill="no"
             android:inputType="numberDecimal"
+            android:layoutDirection="ltr"
             android:letterSpacing="0.5"
             android:minHeight="48dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:paddingBottom="4dp"
             android:textColor="@color/com_ownid_sdk_internal_ui_color_text"
+            android:textDirection="ltr"
             android:textSize="38sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
