--- a/sdk/core/src/main/res/layout/com_ownid_sdk_internal_ui_enrollment.xml
+++ b/sdk/core/src/main/res/layout/com_ownid_sdk_internal_ui_enrollment.xml
@@ -5,12 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/com_ownid_sdk_internal_ui_enrollment_logo"
+        android:layout_width="256dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:adjustViewBounds="true"
+        android:importantForAccessibility="no"
+        android:scaleType="centerInside"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginTop="0dp" />
+
     <TextView
         android:id="@+id/com_ownid_sdk_internal_ui_enrollment_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:textColor="@color/com_ownid_sdk_internal_ui_color_text"
@@ -18,7 +32,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/com_ownid_sdk_internal_ui_enrollment_logo"
         tools:text="@string/com_ownid_sdk_internal_ui_enrollment_title" />
 
     <TextView
